// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type DateTime renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte kXAneV"
      disabled={true}
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <input
        className="sc-jVCNtP cGdnDy"
        disabled={true}
        placeholder=" "
        type="datetime-local"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte kXAneV"
      disabled={true}
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <input
        className="sc-jVCNtP iJSExN"
        disabled={true}
        placeholder=" "
        type="datetime-local"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte kXAneV"
      disabled={true}
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP ebllFv"
          disabled={true}
          placeholder=" "
          type="datetime-local"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <input
        className="sc-jVCNtP bsCJLc"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dAKPfc bIvtxC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <input
        className="sc-jVCNtP eVBHNn"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dAKPfc bIvtxC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP bUuDvx"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dAKPfc bIvtxC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <input
        className="sc-jVCNtP cGdnDy"
        placeholder=" "
        readOnly={true}
        type="datetime-local"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <input
        className="sc-jVCNtP iJSExN"
        placeholder=" "
        readOnly={true}
        type="datetime-local"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP ebllFv"
          placeholder=" "
          readOnly={true}
          type="datetime-local"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <input
        className="sc-jVCNtP cGdnDy"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <input
        className="sc-jVCNtP iJSExN"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP ebllFv"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <input
        className="sc-jVCNtP cGdnDy"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <input
        className="sc-jVCNtP iJSExN"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP ebllFv"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-jVCNtP cvrwIc"
        dir="rtl"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-jVCNtP hSDllj"
        dir="rtl"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP jIaBXZ"
          dir="rtl"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-fkFYRF breKGv"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <input
        className="sc-jVCNtP cGdnDy"
        placeholder="medium"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <input
        className="sc-jVCNtP iJSExN"
        placeholder="large"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP frGBNm"
          placeholder="xlarge"
          type="datetime-local"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <input
        className="sc-jVCNtP dtTXWp"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <input
        className="sc-jVCNtP jEcNzC"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja kgATBq"
      >
        <input
          className="sc-jVCNtP ebllFv"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
